<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/bahnschrift"
        android:gravity="center"
        android:text="@string/RU_settings"
        android:textColor="@color/white"
        android:textSize="48sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/bahnschrift"
            android:gravity="center"
            android:text="@string/RU_select_lang"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/MyTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/rounddropdown">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none">

            </AutoCompleteTextView>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/bahnschrift"
            android:gravity="center"
            android:text="@string/RU_settings_voice"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnVoiceToggle"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:layout_margin="16dp"
            android:elevation="4dp"
            android:fontFamily="@font/bahnschrift"
            android:stateListAnimator="@null"
            android:text="@string/RU_settings_voice_on"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:backgroundTint="@color/play_button"
            app:cornerRadius="100dp" />

    </LinearLayout>

</RelativeLayout>






















